--- a/basic-javascript/index.html
+++ b/basic-javascript/index.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <h1>Welcome to MERN Stack Master Training Course</h1>
-        <h2>Basic JavaScript</h2>
-        <script src="script.js"></script>
+        <h2>Basic and Advanced JavaScript</h2>
+        <script type="module" src="script.js"></script>
     </body>
 </html>
